--- a/ApkPatchLibraryDemo2/res/values/strings.xml
+++ b/ApkPatchLibraryDemo2/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ApkPatchLibraryDemo</string>
+    <string name="app_name">ApkPatchLibraryDemo2</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="demo_info0">0.需要依赖ApkPatchLibrary</string>
+    <string name="demo_info0">0.不需要依赖ApkPatchLibrary</string>
     <string name="demo_info1">1.请先安装旧版新浪微博（V4.5.0，已push到GitHub）；</string>
     <string name="demo_info2">2.将由服务器端生成的差分文件（V4.5.0与V4.5.0之间的差分）拷贝至：/sdcard/weibo.patch（已push到GitHub）；</string>
     <string name="demo_info3">3.点击“Start”；</string>
