--- a/ApkPatchLibraryDemo2/res/values/strings.xml
+++ b/ApkPatchLibraryDemo2/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="demo_info0">0.不需要依赖ApkPatchLibrary</string>
-    <string name="demo_info1">1.请先安装旧版微博V4.5.0；（下载：http://t.cn/RAQQWxU）</string>
-    <string name="demo_info2">2.将由服务器端生成的差分文件weibo.patch（V4.5.0 -> V4.5.0）拷贝至：/sdcard/weibo.patch；（下载：http://t.cn/RAQQjOZ）</string>
+    <string name="demo_info1">1.请先安装旧版微博V4.5.0；点击下载：http://t.cn/RAQQWxU</string>
+    <string name="demo_info2">2.将由服务器端生成的差分文件weibo.patch（V4.5.0 -> V4.5.0）拷贝至：/sdcard/weibo.patch；点击下载：http://t.cn/RAQQjOZ</string>
     <string name="demo_info3">3.点击“Start”；</string>
     <string name="demo_start">Start</string>
     <string name="demo_github">GitHub</string>
